# TrackSensei

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements.txt
app/: config.py  gps_functions.py  gps_testing.py  main.py
data/: gps_data.txt
docs/: SETUP.md
